@@ -1,4 +1,4 @@
-tbx >= 1.6.1
+tbx >= 1.7
 six >= 1.4.0
 pymongo < 3.0
 mongoengine >= 0.10.6
