@@ -31,3 +31,4 @@
 2017-01-03	--	v0.9.0	-- Removed examples from standard job file. Minor fixes. Better task logging.
 2017-02-13	--	v0.9.1	-- Small addon for logging warning messages on task
 2017-05-31	--	v0.10.0	-- Host object (prepare for jobmanager-client v2)
+2017-11-07	--	v0.11.0	-- Refactoring on Jobs and Tasks + Task system overhaul
